Contacts: Change package name

--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="package_name" translatable="false">org.fossify.contacts</string>
+    <string name="package_name" translatable="false">org.fossify.arfoxcontacts</string>
     <string name="app_name" translatable="false">Fossify Contacts</string>
 
     <string name="im" translatable="false">IM</string>
